--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -3,7 +3,11 @@
 
   <div class="profile-container">
     <div class="profile-picture">
-      <img src="/src/app/assets/photo_shadow_1.png" alt="photo_shadow" />
+      <img
+        class="profile-shadow"
+        src="assets/img/photo_shadow_1.png"
+        alt="photo_shadow"
+      />
     </div>
 
     <div class="title-container">
@@ -11,7 +15,27 @@
       <div class="title">
         <h1>Özcan Mirzanli</h1>
         <h2>FRONTEND DEVELOPER</h2>
+        <div class="center-btn">
+          <button class="green-btn">Let's talk!</button>
+        </div>
       </div>
     </div>
+  </div>
+  <img class="background" src="assets/img/background.png" alt="background" />
+
+  <div class="contact-links-container">
+    <div class="purple-line"></div>
+    <div class="contact-links">
+      <a href="https://github.com/ozcanmirzanli">
+        <img src="assets/img/github_btn.png" alt="github_btn" />
+      </a>
+      <a href="">
+        <img src="assets/img/email_btn.png" alt="email_btn" />
+      </a>
+      <a href="https://www.linkedin.com/in/ozcan-mirzanli/">
+        <img src="assets/img/linkedin_btn.png" alt="linkedin_btn" />
+      </a>
+    </div>
+    <span>ozcanmirzanli&#64;proton.me</span>
   </div>
 </div>
