about me page added

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,1 +1,56 @@
-<div class="about-me-container"><p>about-me works!</p></div>
+<div class="about-me-container">
+  <div class="about-me">
+    <div class="about-me-text">
+      <h1>About me</h1>
+      <p>
+        Hi, I'm a Frontend Developer based in Berlin. Lorem, ipsum dolor sit
+        amet consectetur adipisicing elit. Quis accusantium temporibus
+        reprehenderit odit ipsam dolor saepe, nostrum rem, accusamus suscipit
+        optio similique error voluptas. Nisi sit repudiandae ducimus provident
+        libero!
+      </p>
+      <div class="about-me-details">
+        <div class="about-me-single">
+          <img src="assets/img/location.png" alt="location" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem
+            quis quas esse quidem, quod, doloremque illum mollitia aliquam
+            voluptate eaque sequi non quia dolor voluptatum pariatur modi
+            consequuntur odio ducimus!
+          </p>
+        </div>
+        <div class="about-me-single">
+          <img src="assets/img/bulb.png" alt="bulb" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem
+            quis quas esse quidem, quod, doloremque illum mollitia aliquam
+            voluptate eaque sequi non quia dolor voluptatum pariatur modi
+            consequuntur odio ducimus!
+          </p>
+        </div>
+        <div class="about-me-single">
+          <img
+            src="assets/img/puzzle.png"
+            alt="puzzle"
+            style="margin-right: 27px"
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem
+            quis quas esse quidem, quod, doloremque illum mollitia aliquam
+            voluptate eaque sequi non quia dolor voluptatum pariatur modi
+            consequuntur odio ducimus!
+          </p>
+        </div>
+      </div>
+    </div>
+    <img
+      class="about-me-shadow"
+      src="assets/img/shadow_about_me.png"
+      alt="shadow_about_me"
+    />
+    <div class="about-me-photo">
+      <img src="assets/file2.png" alt="file2" />
+      <div class="green-line"></div>
+    </div>
+  </div>
+</div>
