--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -8,6 +8,7 @@
         src="assets/img/photo_shadow_1.png"
         alt="photo_shadow"
       />
+      <img class="photo-big" src="assets/file.png" />
     </div>
 
     <div class="title-container">
@@ -25,17 +26,22 @@
 
   <div class="contact-links-container">
     <div class="purple-line"></div>
-    <div class="contact-links">
-      <a href="https://github.com/ozcanmirzanli">
-        <img src="assets/img/github_btn.png" alt="github_btn" />
-      </a>
-      <a href="">
-        <img src="assets/img/email_btn.png" alt="email_btn" />
-      </a>
-      <a href="https://www.linkedin.com/in/ozcan-mirzanli/">
-        <img src="assets/img/linkedin_btn.png" alt="linkedin_btn" />
-      </a>
+    <div class="contact-options">
+      <div class="contact-links">
+        <a href="https://github.com/ozcanmirzanli">
+          <img src="assets/img/github_btn.png" alt="github_btn" />
+        </a>
+        <a href="">
+          <img src="assets/img/email_btn.png" alt="email_btn" />
+        </a>
+        <a href="https://www.linkedin.com/in/ozcan-mirzanli/">
+          <img src="assets/img/linkedin_btn.png" alt="linkedin_btn" />
+        </a>
+      </div>
+      <span>ozcanmirzanli&#64;proton.me</span>
     </div>
-    <span>ozcanmirzanli&#64;proton.me</span>
+    <div class="scroll-text">
+      <span>Scroll down &#8594; </span>
+    </div>
   </div>
 </div>
