--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,4 +1,68 @@
 .about-me-container {
   height: 100vh;
-  background: rgb(21, 30, 49);
+  background: #141d2f;
+}
+
+.about-me-text {
+  margin-top: 50px;
+  margin-left: 100px;
+  z-index: 3;
+  position: relative;
+  max-width: 800px;
+
+  h1 {
+    margin-bottom: 41px;
+  }
+
+  p {
+    color: white;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19.2px;
+  }
+}
+
+.about-me-details {
+  display: flex;
+  flex-direction: column;
+  margin-top: 32px;
+}
+
+.about-me-single {
+  display: flex;
+  align-items: center;
+  margin-bottom: 24px;
+
+  img {
+    margin-right: 32px;
+
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+}
+
+.about-me-photo {
+  img {
+    width: 453px;
+    height: 453px;
+    position: absolute;
+    margin-left: 150px;
+    border-radius: 50%;
+    border: 4px solid #70e61c;
+  }
+}
+
+.about-me {
+  display: flex;
+}
+
+.about-me-shadow {
+  position: absolute;
+  right: -400px;
+  top: 700px;
+}
+
+.green-line {
+  border-bottom: 4px solid #70e61c;
 }
