--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -1,7 +1,3 @@
-* {
-  font-family: poppins;
-}
-
 .main-page-container {
   background-color: #141d2f;
   height: 100vh;
@@ -14,7 +10,7 @@
 .title-container {
   display: flex;
   align-items: flex-start;
-  margin-top: 80px;
+  margin-bottom: 50px;
 
   h3 {
     color: white;
@@ -23,17 +19,11 @@
     line-height: 76.8px;
     transform: rotate(270deg);
     margin-top: 50px;
+    margin-right: -10px;
   }
 }
 
 .title {
-  h1 {
-    color: white;
-    font-size: 90px;
-    font-weight: 700;
-    line-height: 108px;
-  }
-
   h2 {
     color: var(--secondary-color);
     font-size: 58px;
@@ -78,7 +68,7 @@
 .background {
   position: absolute;
   width: 100%;
-  top: 500px;
+  top: 450px;
 }
 
 .contact-links-container {
@@ -87,6 +77,7 @@
   z-index: 2;
   display: flex;
   align-items: center;
+  width: 100%;
 
   span {
     color: white;
@@ -94,6 +85,21 @@
     font-weight: 400;
     line-height: 27.6px;
   }
+
+  img {
+    width: 30px;
+    height: 30px;
+
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+}
+
+.contact-options {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
 }
 
 .purple-line {
@@ -107,4 +113,17 @@
   a {
     margin-right: 32px;
   }
+}
+
+.photo-big {
+  width: 550px;
+  height: 700px;
+  position: absolute;
+  top: 120px;
+  left: 120px;
+}
+
+.scroll-text {
+  transform: rotate(90deg);
+  width: 200px;
 }
