--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -43,14 +43,19 @@
         </div>
       </div>
     </div>
-    <img
-      class="about-me-shadow"
-      src="assets/img/shadow_about_me.png"
-      alt="shadow_about_me"
-    />
-    <div class="about-me-photo">
-      <img src="assets/file2.png" alt="file2" />
-      <div class="green-line"></div>
+    <div class="shadow-container">
+      <img
+        class="about-me-shadow"
+        src="assets/img/shadow_about_me.png"
+        alt="shadow_about_me"
+      />
+    </div>
+
+    <div class="photo-container">
+      <div class="about-me-photo">
+        <img src="assets/file2.png" alt="file2" />
+      </div>
+      <div class="green-border"></div>
     </div>
   </div>
 </div>
