--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -42,27 +42,45 @@
   }
 }
 
+.about-me {
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+}
+
+.photo-container {
+  display: flex;
+  align-items: center;
+  z-index: 3;
+}
+
 .about-me-photo {
   img {
     width: 453px;
     height: 453px;
-    position: absolute;
-    margin-left: 150px;
+    position: relative;
     border-radius: 50%;
     border: 4px solid #70e61c;
   }
 }
 
-.about-me {
-  display: flex;
+.shadow-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 150%;
+  pointer-events: none;
 }
 
 .about-me-shadow {
   position: absolute;
   right: -400px;
-  top: 700px;
+  top: 0px;
 }
 
-.green-line {
+.green-border {
   border-bottom: 4px solid #70e61c;
+  width: 267px;
 }
