--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -11,6 +11,7 @@
   display: flex;
   align-items: flex-start;
   margin-bottom: 50px;
+  position: relative;
 
   h3 {
     color: white;
@@ -24,6 +25,8 @@
 }
 
 .title {
+  position: relative;
+
   h2 {
     color: var(--secondary-color);
     font-size: 58px;
@@ -66,15 +69,15 @@
 }
 
 .background {
-  position: absolute;
+  position: relative;
   width: 100%;
-  top: 450px;
+  top: -400px;
 }
 
 .contact-links-container {
   position: absolute;
-  bottom: 100px;
-  z-index: 2;
+  bottom: 70px;
+  z-index: 4;
   display: flex;
   align-items: center;
   width: 100%;
@@ -100,6 +103,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
+  position: relative;
 }
 
 .purple-line {
@@ -110,6 +114,8 @@
 }
 
 .contact-links {
+  position: relative;
+
   a {
     margin-right: 32px;
   }
