--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-main-page></app-main-page>
-<app-about-me></app-about-me>
+<app-about-me id="about-me"></app-about-me>
+<app-my-skills></app-my-skills>
