--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: #141d2f;
+  background-color: var(--background-color);
   display: flex;
   align-items: center;
   justify-content: space-between;
