--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="logo"><h2>Özcan</h2></div>
 
   <div class="header-links">
-    <a href="">About me</a>
+    <a href="#about-me">About me</a>
     <a href="">Skills</a>
     <a href="">Portfolio</a>
   </div>
