--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -1,10 +1,10 @@
 .main-page-container {
-  background-color: #141d2f;
+  background-color: var(--background-color);
   height: 100vh;
 }
 
 .profile-shadow {
-  margin-top: 80px;
+  margin-top: 150px;
 }
 
 .title-container {
@@ -71,12 +71,13 @@
 .background {
   position: relative;
   width: 100%;
-  top: -400px;
+  height: 70%;
+  top: -350px;
 }
 
 .contact-links-container {
   position: absolute;
-  bottom: 70px;
+  bottom: 10%;
   z-index: 4;
   display: flex;
   align-items: center;
