design fixes for about me

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
 
   <div class="header-links">
     <a href="#about-me">About me</a>
-    <a href="">Skills</a>
+    <a href="#my-skills">Skills</a>
     <a href="">Portfolio</a>
   </div>
 </div>
