--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,6 +1,9 @@
 .about-me-container {
   height: 100vh;
   background: var(--background-color);
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .about-me-text {
@@ -45,6 +48,7 @@
   display: flex;
   position: relative;
   justify-content: space-between;
+  width: 100%;
 }
 
 .photo-container {
@@ -65,7 +69,7 @@
 
 .shadow-container {
   position: absolute;
-  top: 0;
+  top: -350px;
   right: 0;
   overflow: hidden;
   width: 100%;
