my skills design updated

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -25,8 +25,8 @@
   <img class="background" src="assets/img/background.png" alt="background" />
 
   <div class="contact-links-container">
-    <div class="purple-line"></div>
     <div class="contact-options">
+      <div class="purple-border"></div>
       <div class="contact-links">
         <a href="https://github.com/ozcanmirzanli">
           <img src="assets/img/github_btn.png" alt="github_btn" />
