--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -30,7 +30,7 @@
         </div>
         <div class="single-skill">
           <img src="assets/img/git.png" alt="git" />
-          <span>Git</span>
+          <span>GIT</span>
         </div>
         <div class="single-skill">
           <img src="assets/img/api.png" alt="api" />
@@ -57,6 +57,28 @@
           >
         </div>
       </div>
+    </div>
+  </div>
+
+  <div class="my-skills-text">
+    <div class="my-skills-title">
+      <h1>My skills</h1>
+      <div class="purple-border"></div>
+    </div>
+    <div class="my-skills-info">
+      <p>
+        I have gained experience in building projects with different frontend
+        technologies and concepts.
+      </p>
+      <h3>
+        Looking for
+        <span>another skill?</span>
+      </h3>
+      <p>
+        Feel free to contact me. I look forward to expanding on my previous
+        knowledge.
+      </p>
+      <button class="green-btn">Get in touch</button>
     </div>
   </div>
 </div>
