--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,9 +1,12 @@
 .about-me-container {
   height: 100vh;
-  background: var(--background-color);
   width: 100%;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+  padding-top: 100px;
+  max-width: 1920px;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .about-me-text {
@@ -14,13 +17,6 @@
 
   h1 {
     margin-bottom: 41px;
-  }
-
-  p {
-    color: white;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 19.2px;
   }
 }
 
@@ -69,12 +65,12 @@
 
 .shadow-container {
   position: absolute;
-  top: -350px;
+  top: -300px;
   right: 0;
-  overflow: hidden;
   width: 100%;
   height: 150%;
   pointer-events: none;
+  overflow: hidden;
 }
 
 .about-me-shadow {
