minor design fixes

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,11 @@
 <div class="header">
-  <div class="logo"><h2>Özcan</h2></div>
+  <div class="header-content">
+    <div class="logo"><h2>Özcan</h2></div>
 
-  <div class="header-links">
-    <a href="#about-me">About me</a>
-    <a href="#my-skills">Skills</a>
-    <a href="">Portfolio</a>
+    <div class="header-links">
+      <a href="#about-me">About me</a>
+      <a href="#my-skills">Skills</a>
+      <a href="">Portfolio</a>
+    </div>
   </div>
 </div>
