--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -1,11 +1,11 @@
 .my-skills-container {
-  height: 100vh;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: space-between;
   max-width: 1920px;
   margin: 0 auto;
   width: 100%;
+  padding-top: 180px;
 }
 
 .my-skills-logos {
@@ -86,4 +86,5 @@ h3 {
 
 .green-btn {
   margin-top: 40px;
+  margin-right: 0;
 }
