--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,8 +1,7 @@
 .about-me-container {
-  height: 100vh;
   width: 100%;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   padding-top: 100px;
   max-width: 1920px;
   margin: 0 auto;
