--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -51,10 +51,11 @@
 }
 
 .background {
-  position: relative;
+  position: absolute;
   width: 100%;
-  height: 70%;
-  top: -350px;
+  height: 100%;
+  top: 60%;
+  left: 0;
 }
 
 .contact-links-container {
@@ -64,6 +65,7 @@
   display: flex;
   align-items: center;
   width: 100%;
+  max-width: 1920px;
 
   span {
     color: white;
