--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-main-page></app-main-page>
 <app-about-me id="about-me"></app-about-me>
 <app-my-skills id="my-skills"></app-my-skills>
+<app-portfolio></app-portfolio>
