--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -1,6 +1,6 @@
 .main-page-container {
   height: 100vh;
-  max-width: 1920px;
+  max-width: 1440px;
   margin: 0 auto;
   width: 100%;
 }
@@ -13,7 +13,8 @@
   display: flex;
   align-items: flex-start;
   margin-bottom: 50px;
-  position: relative;
+  position: absolute;
+  right: 0;
 
   h3 {
     color: white;
@@ -22,7 +23,7 @@
     line-height: 76.8px;
     transform: rotate(270deg);
     margin-top: 50px;
-    margin-right: -10px;
+    margin-right: -20px;
   }
 }
 
@@ -54,7 +55,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 60%;
+  top: 55%;
   left: 0;
 }
 
@@ -65,7 +66,7 @@
   display: flex;
   align-items: center;
   width: 100%;
-  max-width: 1920px;
+  max-width: 1440px;
 
   span {
     color: white;
@@ -88,7 +89,7 @@
   display: flex;
   flex-direction: row;
   position: relative;
-  max-width: 1920px;
+  max-width: 1440px;
   margin: 0 auto;
   width: 100%;
   align-items: center;
