--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -18,6 +18,8 @@
           <img src="assets/img/typescript.png" alt="typescript" />
           <span>TypeScript</span>
         </div>
+      </div>
+      <div class="skill-row">
         <div class="single-skill">
           <img src="assets/img/angular.png" alt="angular" />
           <span>Angular</span>
@@ -26,16 +28,16 @@
           <img src="assets/img/firebase.png" alt="firebase" />
           <span>Firebase</span>
         </div>
-      </div>
-      <div class="skill-row">
         <div class="single-skill">
           <img src="assets/img/git.png" alt="git" />
-          <span>GIT</span>
+          <span>Git</span>
         </div>
         <div class="single-skill">
           <img src="assets/img/api.png" alt="api" />
           <span>API</span>
         </div>
+      </div>
+      <div class="skill-row">
         <div class="single-skill">
           <img src="assets/img/scrum.png" alt="scrum" />
           <span>Scrum</span>
@@ -56,27 +58,27 @@
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="my-skills-text">
-    <div class="my-skills-title">
-      <h1>My skills</h1>
-      <div class="purple-border"></div>
-    </div>
-    <div class="my-skills-info">
-      <p>
-        I have gained experience in building projects with different frontend
-        technologies and concepts.
-      </p>
-      <h3>
-        Looking for
-        <span>another skill?</span>
-      </h3>
-      <p>
-        Feel free to contact me. I look forward to expanding on my previous
-        knowledge.
-      </p>
-      <button class="green-btn">Get in touch</button>
+    <div class="my-skills-text">
+      <div class="my-skills-title">
+        <h1>My skills</h1>
+        <div class="purple-border"></div>
+      </div>
+      <div class="my-skills-info">
+        <p>
+          I have gained experience in building projects with different frontend
+          technologies and concepts.
+        </p>
+        <h3>
+          Looking for
+          <span>another skill?</span>
+        </h3>
+        <p>
+          Feel free to contact me. I look forward to expanding on my previous
+          knowledge.
+        </p>
+        <button class="green-btn">Get in touch</button>
+      </div>
     </div>
   </div>
 </div>
