refactoring and added projects section

--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -39,6 +39,10 @@
   }
 }
 
+.purple-text {
+  color: var(--secondary-color) !important;
+}
+
 .single-skill {
   display: flex;
   flex-direction: column;
