--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,60 +1,10 @@
 <div class="my-skills-container">
   <div class="my-skills">
     <div class="my-skills-logos">
-      <div class="skill-row">
-        <div class="single-skill">
-          <img src="assets/img/html.png" alt="html" />
-          <span>HTML</span>
-        </div>
-        <div class="single-skill">
-          <img src="assets/img/css.png" alt="css" />
-          <span>CSS</span>
-        </div>
-        <div class="single-skill">
-          <img src="assets/img/javascript.png" alt="javascript" />
-          <span>JavaScript</span>
-        </div>
-        <div class="single-skill">
-          <img src="assets/img/typescript.png" alt="typescript" />
-          <span>TypeScript</span>
-        </div>
-      </div>
-      <div class="skill-row">
-        <div class="single-skill">
-          <img src="assets/img/angular.png" alt="angular" />
-          <span>Angular</span>
-        </div>
-        <div class="single-skill">
-          <img src="assets/img/firebase.png" alt="firebase" />
-          <span>Firebase</span>
-        </div>
-        <div class="single-skill">
-          <img src="assets/img/git.png" alt="git" />
-          <span>Git</span>
-        </div>
-        <div class="single-skill">
-          <img src="assets/img/api.png" alt="api" />
-          <span>API</span>
-        </div>
-      </div>
-      <div class="skill-row">
-        <div class="single-skill">
-          <img src="assets/img/scrum.png" alt="scrum" />
-          <span>Scrum</span>
-        </div>
-        <div class="single-skill">
-          <img src="assets/img/material_design.png" alt="material design" />
-          <span
-            >Material <br />
-            Design</span
-          >
-        </div>
-        <div class="single-skill">
-          <img src="assets/img/learning.png" alt="learning" />
-          <span
-            >Continually <br />
-            learning</span
-          >
+      <div class="skill-row" *ngFor="let skillRow of getSkillRows(4)">
+        <div class="single-skill" *ngFor="let skill of skillRow">
+          <img [src]="skill.image" [alt]="skill.alt" />
+          <span [innerHTML]="skill.name"></span>
         </div>
       </div>
     </div>
@@ -71,7 +21,7 @@
         </p>
         <h3>
           Looking for
-          <span>another skill?</span>
+          <span class="purple-text">another skill?</span>
         </h3>
         <p>
           Feel free to contact me. I look forward to expanding on my previous
