--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -17,7 +17,7 @@
         <h1>Özcan Mirzanli</h1>
         <h2>FRONTEND DEVELOPER</h2>
         <div class="center-btn">
-          <button class="green-btn">Let's talk!</button>
+          <button class="designed-btn green-btn">Let's talk!</button>
         </div>
       </div>
     </div>
