--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -27,7 +27,7 @@
           Feel free to contact me. I look forward to expanding on my previous
           knowledge.
         </p>
-        <button class="green-btn">Get in touch</button>
+        <button class="designed-btn green-btn">Get in touch</button>
       </div>
     </div>
   </div>
