contact section added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-main-page></app-main-page>
 <app-about-me id="about-me"></app-about-me>
 <app-my-skills id="my-skills"></app-my-skills>
-<app-portfolio></app-portfolio>
+<app-portfolio id="portfolio"></app-portfolio>
+<app-contact></app-contact>
