--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
     <div class="header-links">
       <a href="#about-me">About me</a>
       <a href="#my-skills">Skills</a>
-      <a href="">Portfolio</a>
+      <a href="#portfolio">Portfolio</a>
     </div>
   </div>
 </div>
