--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -70,6 +70,7 @@ h3 {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 513px;
 }
 
 .row-reverse {
@@ -82,6 +83,8 @@ h3 {
 
 .purple-btn {
   background-color: var(--secondary-color);
+  margin-top: 30px;
+  margin-right: 86px;
 
   &:hover {
     background-color: var(--primary-color);
@@ -91,6 +94,8 @@ h3 {
 .empty-green-btn {
   background-color: var(--background-color);
   border: 1px solid var(--primary-color);
+  margin-top: 30px;
+  margin-right: 0;
 
   &:hover {
     background-color: var(--primary-color);
