checkbox & form validation added

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -13,10 +13,9 @@
         <div class="about-me-single">
           <img src="assets/img/location.png" alt="location" />
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem
-            quis quas esse quidem, quod, doloremque illum mollitia aliquam
-            voluptate eaque sequi non quia dolor voluptatum pariatur modi
-            consequuntur odio ducimus!
+            I am adaptable to various work environments and willing to relocate
+            if needed. I prefer hybrid work but am also open to on-site or
+            remote arrangements.
           </p>
         </div>
         <div class="about-me-single">
