--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
 <app-about-me id="about-me"></app-about-me>
 <app-my-skills id="my-skills"></app-my-skills>
 <app-portfolio id="portfolio"></app-portfolio>
-<app-contact></app-contact>
+<app-contact id="contact"></app-contact>
