--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -17,7 +17,9 @@
         <h1>Özcan Mirzanli</h1>
         <h2>FRONTEND DEVELOPER</h2>
         <div class="center-btn">
-          <button class="designed-btn green-btn">Let's talk!</button>
+          <a href="#contact">
+            <button class="designed-btn green-btn">Let's talk!</button>
+          </a>
         </div>
       </div>
     </div>
