--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -32,10 +32,10 @@
         <h3>{{ project.technologies }}</h3>
         <p>{{ project.description }}</p>
         <div class="buttons-container">
-          <a [href]="project.liveLink">
+          <a [href]="project.liveLink" target="_blank">
             <button class="designed-btn purple-btn">Live test</button>
           </a>
-          <a [href]="project.link">
+          <a [href]="project.link" target="_blank">
             <button class="designed-btn empty-green-btn">Github</button>
           </a>
         </div>
