--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -18,31 +18,57 @@
       class="input-section"
     >
       <input
+        #name="ngModel"
         [(ngModel)]="contactData.name"
+        [ngClass]="{
+          'valid-field': name.valid && name.touched,
+          'invalid-field': !name.valid && name.touched
+        }"
         type="text"
         name="name"
         placeholder="Your name"
         required
       />
+      @if (!name.valid && name.touched) {
+      <div class="required-container">
+        <span>Your name is required</span>
+      </div>
+      }
       <input
+        #email="ngModel"
         [(ngModel)]="contactData.email"
+        [ngClass]="{
+          'valid-field': email.valid && email.touched,
+          'invalid-field': !email.valid && email.touched
+        }"
         type="email"
         name="email"
         placeholder="Your email"
         required
         pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
       />
+      @if (!email.valid && email.touched) {
+      <div class="required-container">
+        <span>Your email is required</span>
+      </div>
+      }
       <textarea
         #message="ngModel"
         [(ngModel)]="contactData.message"
+        [ngClass]="{
+          'valid-field': message.valid && message.touched,
+          'invalid-field': !message.valid && message.touched
+        }"
         placeholder="Your message"
         id="message"
         name="message"
         minlength="4"
         required
       ></textarea>
-      @if (!message.valid && message.touched ) {
-      <span>Please enter a message</span>
+      @if (!message.valid && message.touched) {
+      <div class="required-container">
+        <span>Your message is empty</span>
+      </div>
       }
       <div class="privacy-policy">
         <div class="check-box">
@@ -59,7 +85,15 @@
         >
       </div>
       <div class="button-container">
-        <button class="designed-btn gray-btn" type="submit" value="Submit">
+        <button
+          class="designed-btn"
+          [ngClass]="{
+            'green-btn': contactForm.valid,
+            'gray-btn': !contactForm.valid
+          }"
+          type="submit"
+          value="Submit"
+        >
           Send message :)
         </button>
       </div>
