footer section added

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -99,4 +99,9 @@
       </div>
     </form>
   </div>
+  <div class="go-up-btn">
+    <a href="#main-page">
+      <img src="assets/img/go_up_btn.png" alt="go_up_btn" />
+    </a>
+  </div>
 </div>
