--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,4 +1,4 @@
-<div class="main-page-container">
+<div class="main-page-container" id="main-page">
   <app-header></app-header>
 
   <div class="profile-container">
@@ -30,13 +30,13 @@
     <div class="contact-options">
       <div class="purple-border"></div>
       <div class="contact-links">
-        <a href="https://github.com/ozcanmirzanli">
+        <a href="https://github.com/ozcanmirzanli" target="_blank">
           <img src="assets/img/github_btn.png" alt="github_btn" />
         </a>
-        <a href="">
+        <a href="mailto:ozcanmirzanli@proton.me" target="_blank">
           <img src="assets/img/email_btn.png" alt="email_btn" />
         </a>
-        <a href="https://www.linkedin.com/in/ozcan-mirzanli/">
+        <a href="https://www.linkedin.com/in/ozcan-mirzanli/" target="_blank">
           <img src="assets/img/linkedin_btn.png" alt="linkedin_btn" />
         </a>
       </div>
