--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,7 +19,7 @@ body {
 
     .purple-border {
       width: 100px;
-      border-bottom: 4px solid #9747ff;
+      border-bottom: 4px solid var(--secondary-color);
       border-radius: 10px;
     }
   }
