--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,4 @@
 <app-my-skills id="my-skills"></app-my-skills>
 <app-portfolio id="portfolio"></app-portfolio>
 <app-contact id="contact"></app-contact>
+<app-footer></app-footer>
