--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -35,5 +35,11 @@ span {
 .contact-links {
   img {
     margin-right: 42px;
+    width: 30px;
+    height: 30px;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 }
