--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -57,6 +57,12 @@
   flex-direction: column;
   align-items: center;
   margin-right: 105px;
+
+  img {
+    &:hover {
+      animation: up-and-down 0.8s ease-in-out;
+    }
+  }
 }
 
 h3 {
@@ -105,4 +111,17 @@ h3 {
 .green-btn {
   margin-top: 40px;
   margin-right: 0;
+
+  &:active {
+    background-color: var(--primary-color);
+  }
+}
+
+@keyframes up-and-down {
+  0% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
