--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,7 +3,7 @@
 <div class="footer-container">
   <div class="title-impressum">
     <a href="#main-page"><h2>Özcan</h2> </a>
-    <a href="">Impressum</a>
+    <a [routerLink]="['/impressum']">Impressum</a>
   </div>
   <div class="date">
     <span>© Özcan Mirzanli 2024</span>
