--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
-<app-main-page></app-main-page>
-<app-about-me id="about-me"></app-about-me>
-<app-my-skills id="my-skills"></app-my-skills>
-<app-portfolio id="portfolio"></app-portfolio>
-<app-contact id="contact"></app-contact>
-<app-footer></app-footer>
+<ng-container *ngIf="showMainContent">
+  <app-main-page></app-main-page>
+  <app-about-me id="about-me"></app-about-me>
+  <app-my-skills id="my-skills"></app-my-skills>
+  <app-portfolio id="portfolio"></app-portfolio>
+  <app-contact id="contact"></app-contact>
+  <app-footer></app-footer>
+</ng-container>
+
+<!-- This will be replaced by Impressum content -->
+<router-outlet></router-outlet>
