privacy policy added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,5 @@
   <app-footer></app-footer>
 </ng-container>
 
-<!-- This will be replaced by Impressum content -->
+<router-outlet></router-outlet>
 <router-outlet></router-outlet>
