--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="header-content">
-    <div class="logo"><h2>Özcan</h2></div>
+    <a href="#main-page"><h2>Özcan</h2></a>
 
     <div class="header-links">
       <a href="#about-me">About me</a>
