--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -80,8 +80,10 @@
         </div>
 
         <span
-          >I've read the <span class="purple">privacy policy</span> and agree to
-          the processing of my data as outlined.</span
+          >I've read the
+          <a [routerLink]="['/privacy']" href=""
+            ><span class="purple">privacy policy</span> </a
+          >and agree to the processing of my data as outlined.</span
         >
       </div>
       <div class="button-container">
