--- a/src/app/impressum/impressum.component.html
+++ b/src/app/impressum/impressum.component.html
@@ -1,20 +1,26 @@
 <app-header></app-header>
 
-<h1>Impressum</h1>
+<div class="main-container">
+  <div class="impressum-container">
+    <h1>Impressum</h1>
 
-<p>
-  &Ouml;zcan Mirzanli<br />
-  M&uuml;ritzstra&szlig;e 31<br />
-  31<br />
-  10318 Berlin
-</p>
+    <h3>
+      &Ouml;zcan Mirzanli<br />
+      M&uuml;ritzstra&szlig;e 31<br />
+      10318 Berlin
+    </h3>
+    <br />
+    <br />
+    <h2>Kontakt</h2>
+    <h3>
+      Telefon: 017685463990<br />
+      E-Mail: ozcanmirzanli&#64;proton.me
+    </h3>
 
-<h2>Kontakt</h2>
-<p>
-  Telefon: 017685463990<br />
-  Telefax: +49 (0) 123 44 55 99<br />
-  E-Mail: ozcanmirzanli&#64;proton.me
-</p>
+    <h3>
+      Quelle: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a>
+    </h3>
+  </div>
+</div>
 
-<p>Quelle: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a></p>
 <app-footer></app-footer>
