--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -41,5 +41,12 @@
         </div>
       </div>
     </div>
+    <div class="shadow-container">
+      <img
+        class="purple-shadow-portfolio"
+        src="assets/img/purple_shadow_portfolio.png"
+        alt="purple-shadow"
+      />
+    </div>
   </div>
 </div>
