--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -113,4 +113,11 @@
       <img src="assets/img/go_up_btn.png" alt="go_up_btn" />
     </a>
   </div>
+  <div class="shadow-container">
+    <img
+      class="purple-shadow-footer"
+      src="assets/img/purple_shadow_footer.png"
+      alt="purple-shadow"
+    />
+  </div>
 </div>
