--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -7,8 +7,15 @@
           <span [innerHTML]="skill.name"></span>
         </div>
       </div>
+      <div class="shadow-container">
+        <img
+          class="green-shadow"
+          src="assets/img/green_shadow.png"
+          alt="green-shadow"
+        />
+      </div>
     </div>
-
+   
     <div class="my-skills-text">
       <div class="my-skills-title">
         <h1>My skills</h1>
