--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -14,10 +14,10 @@
 
 .my-skills-logos {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   flex-direction: column;
   width: 664px;
-  height: 404px;
+  height: 500px;
   margin-left: 100px;
   margin-right: 105px;
 }
